Showing the title again
Signed-off-by: Thomas Gorissen <mail@serrynaimo.com>

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div id="la_jscamp">jscamp</div>
 				<div id="la_asia">&nbsp;.asia</div>
 				<div id="la_undisclosured">UNDISCLOSURED</div>
-				<!--<div id="ls_info">Singapore, late 2012</div>-->
+				<div id="ls_info">Singapore, late 2012</div>
 			</div>
 			<div id="la_landscape">
 				<div id="la_palm">}</div>
