sponsors section with responsive

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>JScamp.Asia - Undisclosured</title>
 
 	<!-- Mobile viewport optimized: j.mp/bplateviewport -->
-	<meta name="viewport" content="width=800, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta property="og:title" content="JScamp.Asia - Undisclosured"/>
 	<meta property="og:type" content="website"/>
@@ -35,8 +35,6 @@
 
 <body>
 
-	<div id="gradient"></div>
-
 	<div id="body">
 		
 		<div id="logoanim">
@@ -57,12 +55,24 @@
 			</audio>
 		</div>
 		
-		<div id="restofwebsite" style="text-align: center;">
-		
-			<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-			<div></div>
-			<div style="overflow: hidden;" rel="OWN5HM35" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="jscamp.asia" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
-		
+		<div id="sponsors">
+			<h1>sponsors</h1>
+			<ul id="sponsor-list">
+				<li><a href="#"><img src="./static/img/sponsors/google.png"></a></li>
+				<li><a href="#"><img src="./static/img/sponsors/google.png"></a></li>
+				<li><a href="#"><img src="./static/img/sponsors/google.png"></a></li>
+				<li><a href="#"><img src="./static/img/sponsors/google.png"></a></li>
+			</ul>
+
+			<!-- launch rock
+			<div style="overflow: hidden;" rel="OWN5HM35" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="jscamp.asia" data-css=""></div>
+			<script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
+			-->
+
+		</div>
+
+		<div id="restofwebsite">
+			lallalala
 		</div>
 		
 	</div>
