added menu and sections

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 				<li><a href="#"><img src="./static/img/sponsors/google.png"></a></li>
 				<li><a href="#"><img src="./static/img/sponsors/google.png"></a></li>
 			</ul>
+			<a id="register" href="#">register</a>
 
 			<!-- launch rock
 			<div style="overflow: hidden;" rel="OWN5HM35" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="jscamp.asia" data-css=""></div>
@@ -72,7 +73,32 @@
 		</div>
 
 		<div id="restofwebsite">
-			lallalala
+			
+			<nav>
+				<ul>
+					<li><a href="#">home</a></li>
+					<li><a href="#">speakers</a></li>
+					<li><a href="#">about</a></li>
+					<li><a href="#">program</a></li>
+					<li><a href="#">venue</a></li>
+				</ul>
+			</nav>
+
+			<div id="speakers">
+				<h1>speakers</h1>
+			</div>
+
+			<div id="about">
+				<h1>about</h1>
+			</div>
+
+			<div id="program">
+				<h1>program</h1>
+			</div>
+
+			<div id="venue">
+				<h1>venue</h1>
+			</div>
 		</div>
 		
 	</div>
