added menu and structure

--- a/index.html
+++ b/index.html
@@ -81,7 +81,34 @@
 					<li><a href="#">about</a></li>
 					<li><a href="#">program</a></li>
 					<li><a href="#">venue</a></li>
+					<li>
+						<ul id="social">
+							<li>
+								<a href="http://facebook.com/pages/JScampAsia-Undisclosured/224477610989663">	<span>facebook</span>
+								</a>
+							</li>
+							<li>
+								<a href="http://www.twitter.com/pages/jscamp_asia">
+									<span>twitter</span>
+								</a>
+							</li>
+							<li>
+								<a href="mailto:billing@jscamp.asia">
+									<span>email</span>
+								</a>
+							</li>
+						</ul>
+					</li>
 				</ul>
+
+				<div id="nav_logo">
+					<div id="la_logo">
+						<div id="la_jscamp">jscamp</div>
+						<div id="la_asia">&nbsp;.asia</div>
+						<div id="la_undisclosured">UNDISCLOSURED</div>
+						<div id="ls_info">Singapore, late 2012</div>
+					</div>
+				</div>
 			</nav>
 
 			<div id="speakers">
