Date announcement page with twitter and facebook links
Signed-off-by: Thomas Gorissen <mail@serrynaimo.com>

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div id="la_jscamp">jscamp</div>
 				<div id="la_asia">&nbsp;.asia</div>
 				<div id="la_undisclosured">UNDISCLOSURED</div>
-				<div id="ls_info">Singapore, late 2012</div>
+				<div id="ls_info">Singapore,<br/>29th + 30th November 2012</div>
 			</div>
 			<div id="la_landscape">
 				<div id="la_palm">}</div>
@@ -57,12 +57,16 @@
 			</audio>
 		</div>
 		
-		<div id="restofwebsite" style="text-align: center;">
-		
-			<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-			<div></div>
-			<div style="overflow: hidden;" rel="OWN5HM35" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="jscamp.asia" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
-		
+		<div id="restofwebsite">
+
+			<div id="lbcont">
+				<div rel="OWN5HM35" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="jscamp.asia" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
+			</div>
+			
+			<div>
+			<a href="http://twitter.com/jscamp_asia" id="twitter">t</a>
+			<a href="https://www.facebook.com/pages/JScampAsia-Undisclosured/224477610989663" id="facebook">f</a>
+			</div>
 		</div>
 		
 	</div>
