--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
 	<!-- <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script> -->
+	<script type="text/javascript" src="static/js/dependencies/0005-tweenmax-ck.js"></script>
     <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.js"></script>
     <script type="text/javascript">window.jQuery || document.write('<script src="static/js/libs/jquery.min.js">\x3C/script>')</script>
 
@@ -134,6 +135,7 @@
 	<script type="text/javascript" src="static/js/dependencies/0000-headers-ck.js"></script>
 	<script type="text/javascript" src="static/js/dependencies/0020-underscore-ck.js"></script>
 	<script type="text/javascript" src="static/js/dependencies/0050-audiofade-ck.js"></script>
+	<script type="text/javascript" src="static/js/dependencies/0060-superscrollorama-ck.js"></script>
 	<script type="text/javascript" src="static/js/main/00-jscamp-ck.js"></script>
 	<!-- end scripts-->
 
