--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 	<meta property="og:url" content="http://jscamp.asia/"/>
 	<meta property="og:image" content="http://jscamp.asia/static/img/jscampasia.jpg"/>
 	<meta property="og:site_name" content="JScamp.Asia"/>
-	<meta property="og:description" content="The JavaScript Developer Conference for Asia. Singapore, late 2012"/>
+	<meta property="og:description" content="The hands-on JavaScript web and mobile developer conference for Asia. Singapore, 29th + 30th November 2012"/>
 	<meta name="title" content="JScamp.Asia - Undisclosured"/>
-	<meta name="description" content="The JavaScript Developer Conference for Asia. Singapore, late 2012"/>
+	<meta name="description" content="The hands-on JavaScript web and mobile developer conference for Asia. Singapore, 29th + 30th November 2012"/>
 	
 	<!-- Place favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 	<link rel="shortcut icon" href="/favicon.ico" />
@@ -35,47 +35,120 @@
 
 <body>
 
-	<div id="gradient"></div>
-
 	<div id="body">
+	
+		<table id="homepage" class="page">
+		<tr>
+			<td>
 		
-		<div id="logoanim">
-			<img src="static/img/jscampasia.jpg" border="0"/>
-			<div id="la_logo">
-				<div id="la_jscamp">jscamp</div>
-				<div id="la_asia">&nbsp;.asia</div>
-				<div id="la_undisclosured">UNDISCLOSURED</div>
-				<div id="ls_info">Singapore,<br/>29th + 30th November 2012</div>
-			</div>
-			<div id="la_landscape">
-				<div id="la_palm">}</div>
-				<div id="la_trunk">/</div>
-				<span id="la_beach">~~~</span><span id="la_sea">~~</span>		
-			</div>
-			<audio id="la_oceansound" preload="auto" autobuffer="autobuffer" style="display: none"> 
-			  <source src="static/fx/ocean_edge.wav" />
-			</audio>
-		</div>
-		
-		<div id="restofwebsite">
-
-			<div id="lbcont">
-				<div rel="OWN5HM35" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="jscamp.asia" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
+			<div id="logoanim">
+				<img src="static/img/jscampasia.jpg" border="0"/>
+				<div id="la_logo">
+					<div id="la_jscamp">jscamp</div>
+					<div id="la_asia">&nbsp;.asia</div>
+					<div id="la_undisclosured">UNDISCLOSURED</div>
+					<div id="ls_info">Singapore,<br/>29th + 30th November 2012</div>
+				</div>
+				<div id="la_landscape">
+					<div id="la_palm">}</div>
+					<div id="la_trunk">/</div>
+					<span id="la_beach">~~~</span><span id="la_sea">~~</span>		
+				</div>
+				<audio id="la_oceansound" preload="auto" autobuffer="autobuffer" style="display: none"> 
+				  <source src="static/fx/ocean_edge.wav" />
+				</audio>
 			</div>
 			
-			<div>
-			<a href="http://twitter.com/jscamp_asia" id="twitter">t</a>
-			<a href="https://www.facebook.com/pages/JScampAsia-Undisclosured/224477610989663" id="facebook">f</a>
+			<div id="messageCont" class="flipped">
+				<div class="front">
+					<div id="message">The hands-on JavaScript web and mobile developer conference for Asia.</div>
+				</div>
+				<div class="back">
+					<div id="sponsors">
+						with kind support of<br/>
+						<a href="http://www.google.com/about/" target="_blank"><img src="static/img/sponsors/google.png" /></a>
+						<a href="http://www.softlayer.com" target="_blank"><img src="static/img/sponsors/softlayer.png" /></a>
+					</div>
+				</div>
 			</div>
-		</div>
 		
+			</td>
+		</tr>
+		</table>
+	
+		<table id="conferencepage" class="page">
+		<tr>
+			<td>
+		
+			<div id="">
+	
+			</div>
+		
+			</td>
+		</tr>
+		</table>
+	
+		<table id="venuepage" class="page">
+			<tr>
+				<td>
+			
+				<div id="">
+					
+				</div>
+			
+				</td>
+			</tr>
+		</table>
+		
+		<table id="behindthescenespage" class="page">
+			<tr>
+				<td>
+			
+				<div id="">
+
+				</div>
+			
+				</td>
+			</tr>
+		</table>
+
+	</div>
+	
+	<div id="top">
+		
+		<table>
+		<tr>
+			<td>
+				<span class="jscamp">jscamp</span><span class="asia">.asia</span>
+			</td>
+			<td>
+				2012
+			</td>
+			<td>
+			
+			</td>
+			<td>
+			
+			</td>
+			<td>
+			
+			</td>
+			<td>
+				<a href="http://jscamp.wufoo.com/forms/call-for-speakers" target="_blank">Call for Speakers</a>
+			</td>
+		</tr>
+		</table>
+		
+	</div>
+	
+	<div id="scrollinfo">
+		<span>»</span>
 	</div>
 	
     <!-- JavaScript at the bottom for fast page loading -->
 
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
 	<!-- <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js"></script> -->
-	<script type="text/javascript" src="static/js/dependencies/0005-tweenmax-ck.js"></script>
     <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.js"></script>
     <script type="text/javascript">window.jQuery || document.write('<script src="static/js/libs/jquery.min.js">\x3C/script>')</script>
 
@@ -135,8 +208,8 @@
 	<script type="text/javascript" src="static/js/dependencies/0000-headers-ck.js"></script>
 	<script type="text/javascript" src="static/js/dependencies/0020-underscore-ck.js"></script>
 	<script type="text/javascript" src="static/js/dependencies/0050-audiofade-ck.js"></script>
-	<script type="text/javascript" src="static/js/dependencies/0060-superscrollorama-ck.js"></script>
-	<script type="text/javascript" src="static/js/main/00-jscamp-ck.js"></script>
+	<script type="text/javascript" src="static/js/dependencies/0070-jquery.scrollto.js"></script>
+	<script type="text/javascript" src="static/js/main/00-jscamp.js"></script>
 	<!-- end scripts-->
 
     <!-- Resource strings used in Javascript for localization (and other variables and third-party additions) -->
