Getting there slowly :)

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
 							Jacob Thornton
 						</div>
 						<div class="bio">
-							Jacob is an Engineer at Twitter and the co-author of some pretty nifty open source projects: Bootstrap, Ender, Hogan.js... He studied literature in school, which means he has no clue what he's doing and is hyper critical of everything.
+							Jacob is an Engineer at <a href="http://twitter.com">Twitter</a> and the co-author of some pretty nifty open source projects: <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>, <a href="http://ender.no.de/">Ender</a>, <a href="http://twitter.github.com/hogan.js/">Hogan.js</a>...
+							He studied literature in school, which means he has no clue what he's doing and is hyper critical of everything.
 						</div>
 					</li>
 					<li>
@@ -166,7 +167,7 @@
 							Tim Oxley
 						</div>
 						<div class="bio">
-							Tim is a javascript freelancer, working primarily with the node.js platform and client-side MVC applications. He is passionate about readable, maintainable, organised code though best-practices, refactoring and tests.
+							Tim is a JavaScript freelancer, working primarily with the node.js platform and client-side MVC applications. He is passionate about readable, maintainable, organised code though best-practices, refactoring and tests.
 							Tim usually works alongside Rails developers for international clients on internal tools and infrastructure.
 						</div>
 					</li>
@@ -175,17 +176,29 @@
 		</div>
 		
 		<div id="venue">
+			<table class="colors">
+			<tr>
+				<td>
+				</td>
+				<td>
+				</td>
+				<td>
+				</td>
+				<td>
+				</td>
+				<td>
+				</td>
+				<td>
+				</td>
+			</tr>
+			</table>
 			<div id="venuebg">
 			
 			</div>
 		</div>
 		
-	
 	</div>
-	
-	<div id="scrollinfo">
-		<span>}}</span>
-	</div>
+
 	
 	<div id="top">
 		
