Speakers, Workshops, Sprints are added

--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
 			<h3>
 					Finally, a JavaScript conference in Asia.
 						With all its awesome.
-						Plus: we are adding chicken rice and sun;
+						Plus: we are adding chicken rice and sun.
 			</h3>
 		</div>	
 
 		
 		<div id="sessions">
-			<div class="sessionicon">
-				<div id="talks">/*<span>Talks</span></div>
-				<div id="workshops">()<span>Workshops</span></div>
+			<div id="sessionicon">
 				<div id="sprints">&gt;&gt;<span>Sprints</span></div>
+				<div id="workshops">()<span>Workshops</span></div>
+				<div id="talks">/*<span>Talks</span></div>
 			</div>
-			<div class="sessiondesc">
+			<div class="sessiondesc current" id="talksdesc">
 				<span class="intro">
-					<h4>16 talks</h4> to educate, entertain, inspire
-				</span>
+					<h4>16 Talks</h4>
+					We are so happy to host some of the most amazing people who shape the web everyday and who want to inspire and share their experience with you. Over the two days speakers from all over the world host in-depth sessions in 2 tracks.</span>
 				<ul class="speakers">
 					<li>
 						<div class="img"><img src="static/img/speakers/jacobthornton.png" border="0" /></div>
@@ -135,7 +135,7 @@
 							Alex McCaw
 						</div>
 						<div class="bio">
-							<a href="">Alex</a> is a Ruby and JavaScript developer, O'Reilly author and works for <a href="">Stripe</a>, a developer focussed online-payment startup from San Francisco.
+							<a href="http://blog.alexmaccaw.com/">Alex</a> is a Ruby and JavaScript developer, O'Reilly author and works for <a href="http://stripe.com">Stripe</a>, a developer focussed online-payment startup from San Francisco.
 						</div>
 					</li>
 				</ul>
@@ -156,7 +156,9 @@
 						<div class="bio">
 							We'll add more speakers every week. Be sure to check back and get the updates!<br/><br/>
 							Follow us on <a href="http://twitter.com/jscamp_asia">Twitter</a><br/>
-							and <a href="http://facebook.com/javascriptcamp">Facebook</a>
+							and <a href="http://facebook.com/javascriptcamp">Facebook</a><br/><br/>
+							Make sure to tell us who you miss on this list.<br/>
+							<a href="http://jscamp.wufoo.com/forms/call-for-speakers">Our Call for Speakers remains open</a>!
 						</div>
 					</li>
 				</ul>
@@ -173,6 +175,58 @@
 					</li>
 				</ul>
 			</div>
+			<div class="sessiondesc" id="workshopsdesc">
+				<span class="intro">
+					<h4>6 Workshops</h4>
+					Over the time of the conference we want you to get your hands dirty. There's plenty of time, power and Wi-Fi to check out this new library,
+					concept or idea you've heard about while the entire community is around. Even better: Professional hosts will explain and guide you in our workshop sessions.
+				</span>
+				<ul class="speakers">
+					<li>
+						<div class="img"><div class="who">...</div></div>
+						<div class="bio">
+							Workshops hosts will be announced soon. Be sure to check back and get the updates!<br/><br/>
+							Follow us on <a href="http://twitter.com/jscamp_asia">Twitter</a><br/>
+							and <a href="http://facebook.com/javascriptcamp">Facebook</a><br/><br/>
+							Suggest your favorite host in
+							<a href="http://jscamp.wufoo.com/forms/call-for-speakers">our Call for Speakers</a>!
+						</div>
+					</li>
+				</ul>
+				<ul class="speakers">
+	
+				</ul>
+				<ul class="speakers">
+	
+				</ul>
+			</div>
+			<div class="sessiondesc" id="sprintsdesc">
+				<span class="intro">
+					<h4>Sprints</h4>
+					The weekend after the conference we have a very special offer. Interested people can come together in Singapores trendy co-working spaces
+					and contribute as a group to open source JavaScript projects. That means a combined 4 days of JavaScript goodness.<br/>
+					If you're interested in using our conference to find contributors for your project and have the best people in the region work on it, please apply in our <a href="http://jscamp.wufoo.com/forms/call-for-speakers">Call for Speakers</a>.
+				</span>
+				<ul class="speakers">
+					<li>
+						<div class="img"><div class="who">...</div></div>
+						<div class="bio">
+							Sprints will be announced two months before the conference.<br/><br/>
+							If you want to host one, please let us know in<br/>
+							<a href="http://jscamp.wufoo.com/forms/call-for-speakers">our Call for Speakers</a>!<br/><br/>
+							Follow us on <a href="http://twitter.com/jscamp_asia">Twitter</a><br/>
+							and <a href="http://facebook.com/javascriptcamp">Facebook</a>
+						</div>
+					</li>
+				</ul>
+				<ul class="speakers">
+					
+				</ul>
+				<ul class="speakers">
+					
+				</ul>
+			</div>
+
 		</div>
 		
 		<div id="venue">
@@ -244,6 +298,7 @@
 	<script type="text/javascript" src="static/js/dependencies/0002-browsercheck-ck.js"></script>
 	<script type="text/javascript" src="static/js/dependencies/0020-underscore-ck.js"></script>
 	<script type="text/javascript" src="static/js/dependencies/0050-audiofade-ck.js"></script>
+	<script type="text/javascript" src="static/js/dependencies/0070-jquery.scrollto-ck.js"></script>
 	<script type="text/javascript" src="static/js/main/00-jscamp.js"></script>
 	<!-- end scripts-->
 
