--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 			</h2>
 			<h3>
 					Finally, a JavaScript conference in Asia.
-						With all its awesome.
-						Plus: we are adding chicken rice and sun.
+						With all its awesome!<br/>
+						Forget bacon. Here comes chicken rice!
 			</h3>
 		</div>	
 
@@ -116,21 +116,29 @@
 			</div>
 			<div class="sessiondesc current" id="talksdesc">
 				<span class="intro">
-					<h4>16 Talks</h4>
-					We are so happy to host some of the most amazing people who shape the web everyday and who want to inspire and share their experience with you. Over the two days speakers from all over the world host in-depth sessions in 2 tracks.</span>
+					<h4>Talks</h4>
+					We are so happy to host some of the most amazing people who shape the web everyday and who want to inspire
+					and share their experience with you. Over the two days 16 speakers from all over the world will host in-depth sessions
+					in 2 tracks.</span>
 				<ul class="speakers">
 					<li>
-						<div class="img"><img src="static/img/speakers/jacobthornton.png" border="0" /></div>
+						<div class="links">
+							<a href="http://twitter.com/fat" class="twitter" title="@fat"></a>
+						</div>
+						<div class="img"><img src="static/img/speakers/jacobthornton.png" alt="Jacob Thornton" border="0" /></div>
 						<div class="name">
 							Jacob Thornton
 						</div>
 						<div class="bio">
-							Jacob is an Engineer at <a href="http://twitter.com">Twitter</a> and the co-author of some pretty nifty open source projects: <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>, <a href="http://ender.no.de/">Ender</a>, <a href="http://twitter.github.com/hogan.js/">Hogan.js</a>...
+							Jacob is an engineer at <a href="http://twitter.com">Twitter</a> and the co-author of some pretty nifty open source projects: <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>, <a href="http://ender.no.de/">Ender</a>, <a href="http://twitter.github.com/hogan.js/">Hogan.js</a>...
 							He studied literature in school, which means he has no clue what he's doing and is hyper critical of everything.
 						</div>
 					</li>
 					<li>
-						<div class="img"><img src="static/img/speakers/alexmccaw.png" border="0" /></div>
+						<div class="links">
+							<a href="http://twitter.com/maccman" class="twitter" title="@maccman"></a>
+						</div>
+						<div class="img"><img src="static/img/speakers/alexmccaw.png" alt="Alex McCaw" border="0" /></div>
 						<div class="name">
 							Alex McCaw
 						</div>
@@ -141,7 +149,10 @@
 				</ul>
 				<ul class="speakers">
 					<li>
-						<div class="img"><img src="static/img/speakers/ireneros.png" border="0" /></div>
+						<div class="links">
+							<a href="http://twitter.com/ireneros" class="twitter" title="@ireneros"></a>
+						</div>
+						<div class="img"><img src="static/img/speakers/ireneros.png" alt="Irene Ros" border="0" /></div>
 						<div class="name">
 							Irene Ros
 						</div>
@@ -154,30 +165,33 @@
 					<li>
 						<div class="img"><div class="who">...</div></div>
 						<div class="bio">
-							We'll add more speakers every week. Be sure to check back and get the updates!<br/><br/>
+							We'll reveal more speakers every week. Be sure to check back and get the updates!<br/><br/>
 							Follow us on <a href="http://twitter.com/jscamp_asia">Twitter</a><br/>
 							and <a href="http://facebook.com/javascriptcamp">Facebook</a><br/><br/>
-							Make sure to tell us who you miss on this list.<br/>
-							<a href="http://jscamp.wufoo.com/forms/call-for-speakers">Our Call for Speakers remains open</a>!
+							Tell us who you miss on this list in our 
+							<a href="http://jscamp.wufoo.com/forms/call-for-speakers">Call for Speakers</a>!
 						</div>
 					</li>
 				</ul>
 				<ul class="speakers">
 					<li>
-						<div class="img"><img src="static/img/speakers/timoxley.png" border="0" /></div>
+						<div class="links">
+							<a href="http://twitter.com/secoif" class="twitter" title="@secoif"></a>
+						</div>
+						<div class="img"><img src="static/img/speakers/timoxley.png" alt="Tim Oxley" border="0" /></div>
 						<div class="name">
 							Tim Oxley
 						</div>
 						<div class="bio">
 							Tim is a JavaScript freelancer, working primarily with the node.js platform and client-side MVC applications. He is passionate about readable, maintainable, organised code though best-practices, refactoring and tests.
-							Tim usually works alongside Rails developers for international clients on internal tools and infrastructure.
+							Tim usually works alongside Rails developers for international clients and loves dolphins.
 						</div>
 					</li>
 				</ul>
 			</div>
 			<div class="sessiondesc" id="workshopsdesc">
 				<span class="intro">
-					<h4>6 Workshops</h4>
+					<h4>Workshops</h4>
 					Over the time of the conference we want you to get your hands dirty. There's plenty of time, power and Wi-Fi to check out this new library,
 					concept or idea you've heard about while the entire community is around. Even better: Professional hosts will explain and guide you in our workshop sessions.
 				</span>
@@ -188,8 +202,8 @@
 							Workshops hosts will be announced soon. Be sure to check back and get the updates!<br/><br/>
 							Follow us on <a href="http://twitter.com/jscamp_asia">Twitter</a><br/>
 							and <a href="http://facebook.com/javascriptcamp">Facebook</a><br/><br/>
-							Suggest your favorite host in
-							<a href="http://jscamp.wufoo.com/forms/call-for-speakers">our Call for Speakers</a>!
+							Suggest your favorite host in our
+							<a href="http://jscamp.wufoo.com/forms/call-for-speakers">Call for Speakers</a>!
 						</div>
 					</li>
 				</ul>
@@ -212,8 +226,8 @@
 						<div class="img"><div class="who">...</div></div>
 						<div class="bio">
 							Sprints will be announced two months before the conference.<br/><br/>
-							If you want to host one, please let us know in<br/>
-							<a href="http://jscamp.wufoo.com/forms/call-for-speakers">our Call for Speakers</a>!<br/><br/>
+							If you want to host one, please let us know in our
+							<a href="http://jscamp.wufoo.com/forms/call-for-speakers">Call for Speakers</a>!<br/><br/>
 							Follow us on <a href="http://twitter.com/jscamp_asia">Twitter</a><br/>
 							and <a href="http://facebook.com/javascriptcamp">Facebook</a>
 						</div>
