Little style change

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						</ul>
 						
 						<p>
-							Drop your E-Mail and we'll remind you when ticket and pricing information become available!
+							Drop your E-Mail and we'll remind you when ticket and pricing information becomes available!
 						</p>
 						<form>
 							<input type="email" name="email" placeholder="your@email.com"/>
@@ -140,11 +140,11 @@
 						  height: '300',
 						  theme: {
 						    shell: {
-						      background: '#008000',
+						      background: 'transparent',
 						      color: '#ffffff'
 						    },
 						    tweets: {
-						      background: '#008000',
+						      background: 'transparent',
 						      color: '#ffffff',
 						      links: '#ffffff'
 						    }
