Okay, I think I'm making my life to difficult….

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						<h4>The Facts</h4>
 						
 						<ul>
-							<li><a href="JSCamp.Asia 2012.ics"><span class="icon date">00:00</span>29th + 30th November 2012</a></li>
+							<li><a href="JSCamp.Asia 2012.ics"><span class="icon date">DD:MM</span>29th + 30th November 2012</a></li>
 							<li><a href="#talks"><span class="icon talks">/*</span>16 talks in 2 tracks</a></li>
 							<li><a href="#workshops"><span class="icon workshops">()</span>6 workshops</a></li>
 							<li><a href="#sprints"><span class="icon sprints">&gt;&gt;</span>2 day Coding Sprints</a></li>
@@ -319,6 +319,10 @@
 			</tr>
 			</table>
 			<div id="venuedesc">
+				<div id="venuepicture">
+					<h2 class="content">Venue</h2>
+					<img src="static/img/venue.png" border="0" />
+				</div>
 				<div class="content">
 				
 				</div>
