--- a/index.html
+++ b/index.html
@@ -320,11 +320,29 @@
 			</table>
 			<div id="venuedesc">
 				<div id="venuepicture">
-					<h2 class="content">Venue</h2>
+					<div id="hotspots" class="content">
+						<div class="hotspot">
+							There'll be more info on this map<br/>as soon as it is confirmed.
+						</div>
+					</div>
+					<h2 class="content">Our Venue</h2>
 					<img src="static/img/venue.png" border="0" />
 				</div>
 				<div class="content">
-				
+					<table border="0">
+					<tr>
+						<td>
+							<h4>NUSS Kent Ridge Guild House</h4>
+							
+							<p>
+								...
+							</p>
+						</td>
+						<td>
+							<h4>Wi-Fi</h4>
+						</td>
+					</tr>
+					</table>
 				</div>
 			</div>
 		</div>
