Added venue details

--- a/index.html
+++ b/index.html
@@ -355,8 +355,23 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 			<div id="venuedesc">
 				<div id="venuepicture" class="black">
 					<div id="hotspots" class="content">
+						<ul id="pins">
+							<li style="top: 304px; left: 334px;">
+								<div><b>The Entrancehall</b><br/>Make yourself at home. NUSS will cater you with snacks, drinks and a delicious lunch buffet here.</div></li>
+							<li style="top: 305px; left:208px;">
+								<div><b>The Guildhall</b><br/>This big room will host the keynotes and the first track as well as our workshop introductions.</div></li>
+							<li style="top: 245px; left: 229px;">
+								<div><b>Cluny/Dalvey/Evans</b><br/>The three rooms in the second floor combined host our second track of talks and workshops.</div></li>
+							<li style="top: 121px; left: 324px;">
+								<div><b>The Activity Room</b><br/>For workshops we can use this room as a flexible break-out option.</div></li>
+							<li style="top: 155px; left: 290px;">
+								<div><b>The Sports Bar</b><br/>Parallel to all ongoings we'll offer hang-out space, power and Wifi up on the open 3rd floor for you.</div></li>
+							<li style="top: 170px; left: 520px;">
+								<div><b>Café on the Ridge</b><br/>If buffet is not enough, the Café offers Western and Asian cousines inside and on its terrace with view over the pool.<br/><span class="small">This is a NUSS offer and not included in the ticket.</span></div></li>
+							<li style="top: 253px; left: 478px;">
+								<div><b>The Scholar</b><br/>If you're craving a little extra Asia, The Scholar offers exquisit Chinese cousine for you.<br/><span class="small">This is a NUSS offer and not included in the ticket.</span></div></li>
+						</ul>
 						<div class="hotspot">
-							There'll be more info on this map<br/>as soon as it is confirmed.
 						</div>
 					</div>
 					<h2 class="content">Our Venue</h2>
@@ -370,7 +385,7 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 							<p>
 								In the south of Singapore's National University NUS nests this modern Alumni Club. Besides flexible
 								conference functions it offers its members all kinds of sport facilities, restaurants and bars.
-								Some of those will also be available to our guests during the time of JSCamp. Just to make a great JSCamp yet a little bit better.
+								Some of those will also be available to our guests during the time of JSCamp. Just to make a great event yet a little bit better.
 								<br/><br/>
 								<b>Address:</b> (<a href="https://maps.google.com/maps?q=NUSS+Kent+Ridge+Guild+House,+Singapore&hl=en&sll=37.0625,-95.677068&sspn=82.939223,80.15625&t=h&hq=kent+ridge+guild+house,&hnear=Singapore&cid=8550792046711281217&z=18&iwloc=A">Map</a>)<br/>
 								9 Kent Ridge Drive<br/>
