--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 					<h3>
 							Finally, a JavaScript conference in Asia.
 								With all its awesome!<br/>
-								Forget bacon. Here comes chicken rice!
+								Forget bacon. Here comes chicken rice!<br/><br/>
+								<span style="text-shadow: 1px 1px 1px #000;">Get tickets <b>50% off</b> on our flash-sale only on <a href="./JSCamp.Asia Early-Bird flash-sale.ics" style="text-decoration: underline;">August 6th, 3pm SGT</a></span>
 					</h3>
 				</div>
 			</div>
