Added ticket sale announcement

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 							Finally, a JavaScript conference in Asia.
 								With all its awesome!<br/>
 								Forget bacon. Here comes chicken rice!<br/><br/>
-								<span style="text-shadow: 1px 1px 1px #000;">Get tickets <b>50% off</b> on our flash-sale only on <a href="./JSCamp.Asia Early-Bird flash-sale.ics" style="text-decoration: underline;">August 6th, 3pm SGT</a></span>
+								<span class="announcement">Get tickets <b>50% off</b> on our flash-sale only on <a href="./JSCamp.Asia Early-Bird flash-sale.ics" style="text-decoration: underline;">August 6th, 3pm SGT</a></span>
 					</h3>
 				</div>
 			</div>
@@ -147,7 +147,8 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 						</ul>
 						
 						<p>
-							Drop your E-Mail and we'll remind you when ticket and pricing information becomes available!
+							Drop your E-Mail and we'll remind you when tickets are available!<br/>
+							You can also add our <a href="https://www.google.com/calendar/embed?src=cjVtYXNwN2pkOG5tMDlrMG40bWFuYzZjNDRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&gsessionid=OK" target="_blank">Google Calendar</a>.
 						</p>
 						<form id="subscribeForm" action="addsubscriber.php" method="get">
 							<input type="email" name="email" placeholder="your@email.com"/>
