Added Eric and JJ

--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 					<li>
 						<div class="links">
 							<a href="http://twitter.com/ireneros" class="twitter icon" target="_blank" title="@ireneros"></a>
+							<a href="https://plus.google.com/110949345457543290862" class="gplus icon" target="_blank" title="+Irene Ros">+</a>
 						</div>
 						<div class="img"><img src="static1/img/speakers/ireneros.png" alt="Irene Ros" border="0" /></div>
 						<div class="name">
@@ -248,15 +249,16 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 						</div>
 					</li>
 					<li>
+						<div class="links">
+							<a href="http://twitter.com/ebidel" class="twitter icon" target="_blank" title="@ebidel"></a>
+							<a href="https://plus.google.com/115478738847874567952" target="_blank" class="gplus icon" title="+Eric Bidelman">+</a>
+						</div>
+						<div class="img"><img src="static1/img/speakers/ericbidelman.png" alt="Eric Bidelman" border="0" /></div>
 						<div class="name">
-							Check back every week
+							Eric Bidelman
 						</div>
 						<div class="bio">
-							We'll reveal more speakers every week. Be sure to check back and get the updates!<br/><br/>
-							Follow us on <a href="http://twitter.com/jscamp_asia" target="_blank">Twitter</a><br/>
-							and <a href="http://facebook.com/javascriptcamp" target="_blank">Facebook</a><br/><br/>
-							Tell us who you miss on this list in our 
-							<a href="http://jscamp.wufoo.com/forms/call-for-speakers" target="_blank">Call for Speakers</a>!
+							Eric is a Senior Developer Programs Engineer on the <a href="http://www.google.com/chrome" target="_blank">Google Chrome</a> team. He is the author of "Using the HTML5 Filesystem API" and a core contributor to <a href="http://www.html5rocks.com" target="_blank">html5rocks.com</a>. Prior to Google, Eric worked as a software engineer at the University of Michigan where he designed rich web applications and APIs for the university's 19 libraries.
 						</div>
 					</li>
 				</ul>
@@ -274,6 +276,18 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 							making bad jokes about VBScript and dreaming of happy hour. The only native Brit in the company described him in one word: 'cheeky'. You can see him live on stage regularly, with talks about Cloud9, node.js, scaling and mobile development.
 						</div>
 					</li>
+					<li>
+						<div class="name">
+							Check back every week
+						</div>
+						<div class="bio">
+							We'll reveal more speakers every week. Be sure to check back and get the updates!<br/><br/>
+							Follow us on <a href="http://twitter.com/jscamp_asia" target="_blank">Twitter</a><br/>
+							and <a href="http://facebook.com/javascriptcamp" target="_blank">Facebook</a><br/><br/>
+							Tell us who you miss on this list in our 
+							<a href="http://jscamp.wufoo.com/forms/call-for-speakers" target="_blank">Call for Speakers</a>!
+						</div>
+					</li>
 				</ul>
 			</div>
 			<div class="sessiondesc" id="workshopsdesc">
@@ -284,20 +298,31 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 				</span>
 				<ul class="speakers">
 					<li>
+						<div class="links">
+							<a href="https://plus.google.com/115478738847874567952" target="_blank" class="gplus icon" title="+Shannon -jj Behrens">+</a>
+						</div>
+						<div class="img"><img src="static1/img/speakers/jj.png" alt="Shannon &quot;JJ&quot; Behrens" border="0" /></div>
+						<div class="name">
+							Shannon &quot;JJ&quot; Behrens
+						</div>
+						<div class="bio">
+							JJ is a developer advocate at Google. His goal is to help people write high-fidelity, high-performance, rich, client-side applications in <a href="http://code.google.com/p/dart/" target="_blank">Dart</a>. He's a well-known member of the Python community. He <a href="http://jjinux.blogspot.com" target="_blank">blogs</a> on topics such as Python, Ruby, Linux, open source software, the Web, and lesser-known programming languages.
+						</div>
+					</li>
+				</ul>
+				<ul class="speakers">
+					<li>
 						<div class="name">
 							Soon!
 						</div>
 						<div class="bio">
-							Workshops hosts will be announced soon. Be sure to check back and get the updates!<br/><br/>
+							More Workshop hosts and the topics will be announced closer to the conference. Be sure to check back and get the updates!<br/><br/>
 							Follow us on <a href="http://twitter.com/jscamp_asia" target="_blank">Twitter</a><br/>
 							and <a href="http://facebook.com/javascriptcamp" target="_blank">Facebook</a><br/><br/>
 							Suggest your favorite host in our
 							<a href="http://jscamp.wufoo.com/forms/call-for-speakers" target="_blank">Call for Speakers</a>!
 						</div>
 					</li>
-				</ul>
-				<ul class="speakers">
-	
 				</ul>
 				<ul class="speakers">
 	
