--- a/index.html
+++ b/index.html
@@ -205,15 +205,15 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 				<ul class="speakers">
 					<li>
 						<div class="links">
-							<a href="http://twitter.com/fat" class="twitter icon" title="@fat" target="_blank"></a>
+							<a href="http://twitter.com/ebidel" class="twitter icon" target="_blank" title="@ebidel"></a>
+							<a href="https://plus.google.com/115478738847874567952" target="_blank" class="gplus icon" title="+Eric Bidelman">+</a>
 						</div>
-						<div class="img"><img src="static1/img/speakers/jacobthornton.png" alt="Jacob Thornton" border="0" /></div>
+						<div class="img"><img src="static1/img/speakers/ericbidelman.png" alt="Eric Bidelman" border="0" /></div>
 						<div class="name">
-							Jacob Thornton
+							Eric Bidelman
 						</div>
 						<div class="bio">
-							Jacob is an engineer at <a href="http://twitter.com" target="_blank">Twitter</a> and the co-author of some pretty nifty open source projects: <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a>, <a href="http://ender.no.de/" target="_blank">Ender</a>, <a href="http://twitter.github.com/hogan.js/" target="_blank">Hogan.js</a>...
-							He studied literature in school, which means he has no clue what he's doing and is hyper critical of everything.
+							Eric is a Senior Developer Programs Engineer on the <a href="http://www.google.com/chrome" target="_blank">Google Chrome</a> team. He is the author of "Using the HTML5 Filesystem API" and a core contributor to <a href="http://www.html5rocks.com" target="_blank">html5rocks.com</a>. Prior to Google, Eric worked as a software engineer at the University of Michigan where he designed rich web applications and APIs for the university's 19 libraries.
 						</div>
 					</li>
 					<li>
@@ -250,15 +250,15 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 					</li>
 					<li>
 						<div class="links">
-							<a href="http://twitter.com/ebidel" class="twitter icon" target="_blank" title="@ebidel"></a>
-							<a href="https://plus.google.com/115478738847874567952" target="_blank" class="gplus icon" title="+Eric Bidelman">+</a>
+							<a href="http://twitter.com/fat" class="twitter icon" title="@fat" target="_blank"></a>
 						</div>
-						<div class="img"><img src="static1/img/speakers/ericbidelman.png" alt="Eric Bidelman" border="0" /></div>
+						<div class="img"><img src="static1/img/speakers/jacobthornton.png" alt="Jacob Thornton" border="0" /></div>
 						<div class="name">
-							Eric Bidelman
+							♒∆✝
 						</div>
 						<div class="bio">
-							Eric is a Senior Developer Programs Engineer on the <a href="http://www.google.com/chrome" target="_blank">Google Chrome</a> team. He is the author of "Using the HTML5 Filesystem API" and a core contributor to <a href="http://www.html5rocks.com" target="_blank">html5rocks.com</a>. Prior to Google, Eric worked as a software engineer at the University of Michigan where he designed rich web applications and APIs for the university's 19 libraries.
+							Fat, with real name Jacob Thornton, is an engineer at <a href="http://twitter.com" target="_blank">Twitter</a> and the co-author of some pretty nifty open source projects: <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a>, <a href="http://ender.no.de/" target="_blank">Ender</a>, <a href="http://twitter.github.com/hogan.js/" target="_blank">Hogan.js</a>...
+							He studied literature in school, which means he has no clue what he's doing and is hyper critical of everything.
 						</div>
 					</li>
 				</ul>
@@ -303,7 +303,7 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 						</div>
 						<div class="img"><img src="static1/img/speakers/jj.png" alt="Shannon &quot;JJ&quot; Behrens" border="0" /></div>
 						<div class="name">
-							Shannon &quot;JJ&quot; Behrens
+							Shannon JJ Behrens
 						</div>
 						<div class="bio">
 							JJ is a developer advocate at Google. His goal is to help people write high-fidelity, high-performance, rich, client-side applications in <a href="http://code.google.com/p/dart/" target="_blank">Dart</a>. He's a well-known member of the Python community. He <a href="http://jjinux.blogspot.com" target="_blank">blogs</a> on topics such as Python, Ruby, Linux, open source software, the Web, and lesser-known programming languages.
