--- a/index.html
+++ b/index.html
@@ -218,17 +218,27 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 					</li>
 					<li>
 						<div class="links">
-							<a href="http://twitter.com/michalbe" class="twitter icon" title="@michalbe" target="_blank"></a>
+							<a href="http://twitter.com/fat" class="twitter icon" title="@fat" target="_blank"></a>
 						</div>
-						<div class="img"><img src="static1/img/speakers/michalbudzynski.png" alt="Michal Budzynski" border="0" /></div>
+						<div class="img"><img src="static1/img/speakers/jacobthornton.png" alt="Jacob Thornton" border="0" /></div>
 						<div class="name">
-							Michal Budzynski
+							♒∆✝
 						</div>
 						<div class="bio">
-							Michal is an Open Web Alchemist, working on Boot2Gecko project at Mozilla.
-							In his free time he creates many ridiculous experiments like <a href="https://developer.mozilla.org/pl/demos/detail/css-nyan-cat" target="_blank">CSS Nyan Cat</a> or <a href="https://demoparty.mozillalabs.com/gallery/43/al-your-gradient-are-belong-to-us" target="_blank">All your gradient are belong to us</a>.
-							He officiates as an HTML5 GameDev trainer in W3C and ran technical workshops and tech-talks in many countries on different continents. He organizes <a href="http://ongamestart.com/" target="_blank">onGameStart</a> in Warsaw, the first HTML5 games conference and safely says that making web a better place is not just his job - it's his lifestyle.
-							That's why he founds <a href="http://bly.sk" target="_blank">BLYSK</a>, very first serious web animation tool.
+							Fat, with real name Jacob Thornton, is an engineer at <a href="http://twitter.com" target="_blank">Twitter</a> and the co-author of some pretty nifty open source projects: <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a>, <a href="http://ender.no.de/" target="_blank">Ender</a>, <a href="http://twitter.github.com/hogan.js/" target="_blank">Hogan.js</a>...
+							He studied literature in school, which means he has no clue what he's doing and is hyper critical of everything.
+						</div>
+					</li>
+					<li>
+						<div class="name">
+							Check back every week
+						</div>
+						<div class="bio">
+							We'll reveal more speakers every week. Be sure to check back and get the updates!<br/><br/>
+							Follow us on <a href="http://twitter.com/jscamp_asia" target="_blank">Twitter</a><br/>
+							and <a href="http://facebook.com/javascriptcamp" target="_blank">Facebook</a><br/><br/>
+							Tell us who you miss on this list in our 
+							<a href="http://jscamp.wufoo.com/forms/call-for-speakers" target="_blank">Call for Speakers</a>!
 						</div>
 					</li>
 				</ul>
@@ -250,21 +260,6 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 					</li>
 					<li>
 						<div class="links">
-							<a href="http://twitter.com/fat" class="twitter icon" title="@fat" target="_blank"></a>
-						</div>
-						<div class="img"><img src="static1/img/speakers/jacobthornton.png" alt="Jacob Thornton" border="0" /></div>
-						<div class="name">
-							♒∆✝
-						</div>
-						<div class="bio">
-							Fat, with real name Jacob Thornton, is an engineer at <a href="http://twitter.com" target="_blank">Twitter</a> and the co-author of some pretty nifty open source projects: <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a>, <a href="http://ender.no.de/" target="_blank">Ender</a>, <a href="http://twitter.github.com/hogan.js/" target="_blank">Hogan.js</a>...
-							He studied literature in school, which means he has no clue what he's doing and is hyper critical of everything.
-						</div>
-					</li>
-				</ul>
-				<ul class="speakers">
-					<li>
-						<div class="links">
 							<a href="http://twitter.com/drbernhard" class="twitter icon" target="_blank" title="@drbernhard"></a>
 						</div>
 						<div class="img"><img src="static1/img/speakers/janjongboom.png" alt="Jan Jongboom" border="0" /></div>
@@ -276,16 +271,33 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 							making bad jokes about VBScript and dreaming of happy hour. The only native Brit in the company described him in one word: 'cheeky'. You can see him live on stage regularly, with talks about Cloud9, node.js, scaling and mobile development.
 						</div>
 					</li>
+				</ul>
+				<ul class="speakers">
 					<li>
+						<div class="links">
+							<a href="http://twitter.com/maccman" class="twitter icon" target="_blank" title="@maccman"></a>
+						</div>
+						<div class="img"><img src="static1/img/speakers/alexmccaw.png" alt="Alex McCaw" border="0" /></div>
 						<div class="name">
-							Check back every week
+							Alex McCaw
 						</div>
 						<div class="bio">
-							We'll reveal more speakers every week. Be sure to check back and get the updates!<br/><br/>
-							Follow us on <a href="http://twitter.com/jscamp_asia" target="_blank">Twitter</a><br/>
-							and <a href="http://facebook.com/javascriptcamp" target="_blank">Facebook</a><br/><br/>
-							Tell us who you miss on this list in our 
-							<a href="http://jscamp.wufoo.com/forms/call-for-speakers" target="_blank">Call for Speakers</a>!
+							<a href="http://blog.alexmaccaw.com/" target="_blank">Alex</a> is a Ruby and JavaScript developer, O'Reilly author and works for <a href="http://stripe.com" target="_blank">Stripe</a>, a developer focussed online-payment startup from San Francisco.
+						</div>
+					</li>
+					<li>
+						<div class="links">
+							<a href="http://twitter.com/michalbe" class="twitter icon" title="@michalbe" target="_blank"></a>
+						</div>
+						<div class="img"><img src="static1/img/speakers/michalbudzynski.png" alt="Michal Budzynski" border="0" /></div>
+						<div class="name">
+							Michal Budzynski
+						</div>
+						<div class="bio">
+							Michal is an Open Web Alchemist, working on Boot2Gecko project at Mozilla.
+							In his free time he creates many ridiculous experiments like <a href="https://developer.mozilla.org/pl/demos/detail/css-nyan-cat" target="_blank">CSS Nyan Cat</a> or <a href="https://demoparty.mozillalabs.com/gallery/43/al-your-gradient-are-belong-to-us" target="_blank">All your gradient are belong to us</a>.
+							He officiates as an HTML5 GameDev trainer in W3C and ran technical workshops and tech-talks in many countries on different continents. He organizes <a href="http://ongamestart.com/" target="_blank">onGameStart</a> in Warsaw, the first HTML5 games conference and safely says that making web a better place is not just his job - it's his lifestyle.
+							That's why he founds <a href="http://bly.sk" target="_blank">BLYSK</a>, very first serious web animation tool.
 						</div>
 					</li>
 				</ul>
