--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ _,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,__,.-=~'`^`'~=-.,.-=~'`^`'~=-.,__,.-=~'
 						</div>
 						<div class="img"><img src="static2/img/speakers/alexmccaw.png" alt="Alex McCaw" border="0" /></div>
 						<div class="name">
-							Alex McCaw
+							Alex MacCaw
 						</div>
 						<div class="bio">
 							<a href="http://blog.alexmaccaw.com/" target="_blank">Alex</a> is a Ruby and JavaScript developer, O'Reilly author and works for <a href="http://stripe.com" target="_blank">Stripe</a>, a developer focussed online-payment startup from San Francisco.
